--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,13 @@ p, form {
 }
 
 #results {
-  background-color: #9f2042;
+  background-color: #cc2753;
   border: 2px solid #3d1308;
   text-align: center;
   margin-left: 100px;
   margin-right: 100px;
   padding-left: 20px;
+  padding-right: 20px;
   font-weight: bold;
   color: white;
   font-size: 115%;
