--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,14 @@ p, form {
   float: right;
   margin-right: 50px;
   border: 5px solid #211103;
+  width="15%";
+  height="auto";
 }
 
 #swirl {
   float: left;
   margin-left: 50px;
   border: 5px solid #211103;
+  width="30%"; 
+  height="auto";
 }
